--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "electron ."
   },
   "dependencies": {
-    "electron": "^6.0.12"
+    "electron": "^6.0.12",
+    "moment": "^2.24.0"
   }
 }
